<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Cool_Live</string>
    <string name="txt_splash_dec">This is my sologan !</string>
    <string name="tip_mainTab">Hello MainTab fragment</string>
    <string name="tip_startLive">Hello StartLive fragment</string>
    <string name="tip_hotList">Hello HotList fragment</string>
    <string name="tip_followingList">Hello FollowingList fragment</string>
    <string name="tip_dicoverList">Hello DicoverList fragment</string>
    <string name="tip_personInfoTip">Hello PersonInfo fragment</string>
    <string name="tip_passwordFormat">6 - 20 numbers or characters</string>
    <string name="tip_resetPassword">We will send the verification code to reset password</string>
    <string name="tip_countryOrRegion">Contry/Region:</string>
    <string name="tip_phoneNumber">Phone no</string>
    <string name="tip_timecount">%ds</string>
    <string name="tip_loginFailed">Wrong password, you have 5 chances</string>
    <string name="tip_waitlogin">登陆中，请稍后</string>
    <string name="tip_phoneRegisted">This account has already been registered.</string>
    <string name="tip_verifPhoneNumber">正在验证手机号.</string>
    <string name="tip_regAccount">注册中.</string>
    <string name="tip_selectGiftFirst">请选择要发送的礼物</string>
    <string name="tip_focused">已经关注</string>
    <string name="tip_unFocused">已经取消关注</string>
    <string name="tip_unReadLiveMsg">%d unread messages</string>
    <string name="tip_sureToCloseRoom">Are you sure wish to end this live stream?</string>
    <string name="tip_regSuccessed">注册成功!</string>
    <string name="tip_passwordMinLenReq">please enter at least 6 characters.</string>
    <string name="tip_createRoom">正在创建直播间</string>
    <string name="tip_createRoomSuccessed">创建成功</string>
    <string name="tip_uploading">Uploading...</string>
    <string name="tip_loading">Loading...</string>
    <string name="tip_deleting">Deleting...</string>
    <string name="tip_complete">Complete</string>
    <string name="tip_failed">Failed</string>
    <string name="tip_failed_to_load">Failed to load.</string>
    <string name="tip_reload">Reload</string>
    <string name="tip_failed4UnConnectServ">Failed\nConnot connect to server</string>
    <string name="txt_tab_main">首页</string>
    <string name="txt_tab_startLive">ֱ直播</string>
    <string name="txt_tab_personInfo">个人</string>
    <string name="txt_tab_followTab">关注</string>
    <string name="txt_tab_hotTab">热门</string>
    <string name="txt_tab_discoverTab">最新</string>
    <string name="txt_searchTab">搜索</string>
    <string name="txt_createPassword">Create a password</string>
    <string name="txt_signup_next">Sing Up</string>
    <string name="txt_signup_title">Sign Up with Phone Number</string>
    <string name="txt_login_title">Log in with Phone Number</string>
    <string name="txt_next">Next</string>
    <string name="txt_password">Password</string>
    <string name="txt_login">Log in</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_ok">Ok</string>
    <string name="txt_forgotPassword">Forgot password</string>
    <string name="txt_roomstatus_online">LIVE</string>
    <string name="txt_roomstatus_offline">OFFLINE</string>
    <string name="txt_startlive_golive">Go Live</string>
    <string name="txt_hint_input_general">Say something...</string>
    <string name="txt_hint_input_barrage">0.1 credit per pop-up message</string>
    <string name="txt_send_msg">Send</string>
    <string name="txt_verification">Verification</string>
    <string name="txt_sent">sent</string>
    <string name="txt_colon">&#160;:</string>
    <string name="txt_endLive_title">Live Stream Ended</string>
    <string name="txt_endlive_diamonds">Diamonds</string>
    <string name="txt_endlive_viewers">Viewers</string>
    <string name="txt_endlive_newFans">New Fans</string>
    <string name="txt_endlive_shares">Shares</string>
    <string name="txt_endlive_shareTitle">Share your achievements</string>
    <string name="txt_endlive_homepage">Homepage</string>
    <string name="txt_follow">Follow</string>
    <string name="txt_following">Following</string>
    <string name="txt_moreBroadcast">More Broadcasts</string>
    <string name="tip_updating">updating</string>
    <string name="txt_using">using</string>
    <string name="txt_use">use</string>
    <string name="txt_manageCover">Manage Cover</string>
    <string name="txt_auditing">Auditing</string>
    <string name="txt_coverTips1">Broadcaster has at most 3 covers</string>
    <string name="txt_coverTips2">Not through the cover will be removed directly</string>
    <string name="txt_sureDeleteCover">Are you sure you wish to delete this cover?</string>
    <string name="tip_needCoverPhoto">请选择房间封面图</string>
    <string name="tip_needRoomTitle">请输入房间标题</string>
    <string name="tip_emoji_unusable">Sorry. To use advanced emoticion, you need to upgrade the intimacy to 10</string>
    <string name="tip_roomGiftCredit">Rewarded Credits: %1$s</string>
    <string name="liveroom_audience_enter_notify">Joined.</string>
    <string name="liveroom_audience_roomin_processing">IM roomining…</string>
    <string name="liveroom_audience_roomout_processing">Audience roomout…</string>
    <string name="liveroom_anchor_roomout_processing">Anchor roomout…</string>
    <string name="liveroom_message_template_normal"><![CDATA[<b><font color=\"#EC0102\"><xliff:g id="message_username">%1$s</xliff:g> : </font></b><font color=\"#3C3C3C\">%2$s</font>]]></string>
    <string name="liveroom_message_template_roomin"><![CDATA[<b><font color=\"#EC0102\"><xliff:g id="message_username">%1$s</xliff:g></font></b><font color=\"#3C3C3C\"> Joined</font>]]></string>
    <string name="liveroom_message_template_follow"><![CDATA[<b><font color=\"#EC0102\"><xliff:g id="message_username">%1$s</xliff:g></font></b><font color=\"#0CD7DE\"> is following the broadcaster</font>]]></string>
    <string name="liveroom_message_template_gift"><![CDATA[<b><font color=\"#EC0102\"><xliff:g id="message_username">%1$s</xliff:g></font></b><font color=\"#DF3CE9\"> sent <xliff:g id="message_giftname">%2$s</xliff:g> </font> [gift:%3$s] </font><font color=\"#DF3CE9\"><xliff:g id="message_giftnum">%4$s</xliff:g> </font>]]></string>
    <string name="liveroom_message_gift_x">x %1$d</string>
    <string name="liveroom_tariff_prompt_free_public">Public Broadcast is free to watch.</string>
    <string name="liveroom_tariff_prompt_pre_public">VIP Public Broadcast is billed at %1$s credit per minute.</string>
    <string name="liveroom_tariff_prompt_silver_private">Private broadcast is billed at %1$s credit per minute.</string>
    <string name="liveroom_tariff_prompt_golden_private">VIP Private Broadcast is billed at %1$s credit per minute.</string>
    <string name="liveroom_tariff_prompt_ok">Got it</string>
    <string name="liveroom_entrancecar_joined">%1$s Joined</string>
    <string name="liveroom_vipguest">VIP Guest</string>
    <string name="liveroom_header_vipguestdata">(%1$s/%2$s)</string>
    <string name="liveroom_rebate_current_credit">Rewarded credits:</string>
    <string name="liveroom_rebate_generated_desc">Generated in:</string>
    <string name="liveroom_rebate_rules">Rules:\n1. Watching every %1$s can get %2$s rewarded credits.\n2. Rewarded credits can only be used to send gifts in the same live session.\n3.When the live ends, rewarded credits would be cleaned up.</string>
    <string name="common_empty_text">No content yet.</string>
    <string name="common_btn_tap_to_retry">Top to retry</string>
    <string name="followinglist_empty_text">No following performers.</string>
    <string name="liveroom_transition_anchor_private_broadcast_exception"> %1$s is in a private session. Do you want to send a private broadcast invitation now ?</string>
    <string name="liveroom_transition_invite_novoucher_tips">Waitting for %1$s to start the session...\n\nWe will charge you 0.5 credits as the deposit of the invitation first.\nIf the broadcaster turn your invitation down, we will return it to you.\nIf you cancel the invitation when the broadcaster accept it, your credits won\'t be returned.</string>
    <string name="liveroom_transition_invite_voucher_tips">Waitting for %1$s to start the session...\n\nWe have determined you have a Private Live Voucher. It would be applied when the live starts. The first 3 minutes is free.\nPrivate Live Price: 0.1 credit / minute</string>
    <string name="liveroom_transition_enterroom_wait">%1$s has accepted your invitation.Live will start in</string>
    <string name="liveroom_transition_invite_failed">Failed to send a private broadcast invitation .Please try again later.</string>
    <string name="liveroom_transition_invite_deny">No response from %1$s, please try again later.</string>
    <string name="liveroom_transition_invite_overtime">Invitation has been expired.</string>
    <string name="liveroom_transition_invite_anchor_cancel">The invitation has been expired. Please try again.</string>
    <string name="common_btn_ok">Ok</string>
    <string name="common_btn_cancel">Cancel</string>
    <string name="common_btn_add_credit">Add Credit</string>
    <string name="liveroom_btn_end_live">End Live</string>
    <string name="liveroom_btn_book_broadcast">Book</string>
    <string name="liveroom_btn_browse_hotlist">Hot</string>
    <string name="liveroom_my_balance">My Balance</string>
    <string name="liveroom_gift_user_levellimit">This gift is only available for user level 5 or higher</string>
    <string name="liveroom_gift_intimacy_levellimit">This gift is only available for intimacy 5 or higher</string>
    <string name="liveroom_gift_pack_empty">Your backpack is empty</string>
    <string name="liveroom_gift_pack_notsendable">Sorry, this gift can not be sent in this broadcaster room</string>
    <string name="liveroom_popup_credits_noenough">Oops! Your don\'t have enough credits to send this pop-up message.</string>
    <string name="liveroom_gift_credits_noenough">Oops! Your don\'t have enough credits to send this gift.</string>
    <string name="live_balance_credits">My Balance: %1$s credits</string>
    <string name="live_balance_recharge">Recharge</string>
    <string name="live_balance_userId">ID:%1$s</string>
    <string name="live_gift_coins">%1$s Credits</string>
    <string name="system_announcement_link"><![CDATA[<b><font color=\"#0CD7DE\"><a href=\"%1$s\"><span>%2$s</span></a></font></b>]]></string>
    <string name="system_announcement_unlink_normal"><![CDATA[<b><font color=\"#0CD7DE\">%1$s</font></b>]]></string>
    <string name="system_announcement_unlink_carin"><![CDATA[<b><font color=\"#FFD205\">%1$s</font></b>]]></string>
    <string name="system_announcement_unlink_chat"><![CDATA[<b><font color=\"#00B957\">%1$s</font></b>]]></string>
    <string name="system_announcement_credits">You have been granted %1$s credits.</string>
    <string name="system_announcement_level_upgraded">Congratulations! You have upgraded to Level %1$s.</string>
    <string name="live_talent_credits">%1$s credits</string>
    <string name="live_book_tips1">When do you want to start the private live?</string>
    <string name="live_date">Date</string>
    <string name="live_time">Time</string>
    <string name="live_add_vgift">Add a virtual gift</string>
    <string name="live_quantity">Quantity:</string>
    <string name="live_total_price">Total Price:</string>
    <string name="live_note">Note:</string>
    <string name="live_note_tips">
        0.5 credits will be deducted from your account as the first 5 minutes of private live. In the below situations, your credits will be returned to your account:
        \n
        \n- The host did not accept your request.
        \n- The host did not show up during the expected period
    </string>
    <string name="live_book_now">BOOK NOW</string>
</resources>