<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="303.5dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/bg_custom_dialog"
    android:orientation="vertical">

    <TextView
        android:id="@+id/rdceastv_simple_dbbtn_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tip_phoneRegisted"
        android:layout_marginTop="32.5dp"
        android:paddingLeft="27dp"
        android:paddingRight="27dp"
        android:textColor="@color/txt_color_uninput"
        android:gravity="center_horizontal"
        android:textSize="12sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="44.5dp"
        android:layout_marginBottom="42dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_simple_dbbtn_cancel"
            style="@style/CustomTheme.SimpleDialog.Btn.Cancel"
            android:textColor="#383838"
            android:text="@string/txt_cancel"/>

        <TextView
            android:id="@+id/tv_simple_dbbtn_confirm"
            style="@style/CustomTheme.SimpleDialog.Btn.Confirm"
            android:text="@string/txt_login"/>

    </LinearLayout>

</LinearLayout>
