<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <include layout="@layout/item_number_verif_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        />

    <EditText
        android:id="@+id/et_loginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:padding="10dp"
        android:layout_marginTop="30dp"
        android:hint="@string/txt_password"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:inputType="textPassword"
        android:background="@drawable/selector_edittext_buttom_line"/>

    <TextView
        android:id="@+id/tv_loginByMobile"
        android:text="@string/txt_login"
        style="@style/CustomTheme.Btn.Next"
        android:background="@drawable/selector_btn_next"
        android:layout_marginTop="40dp"
        android:onClick="onClick"
        android:clickable="true"
        android:layout_gravity="center_horizontal"
        />

    <TextView
        android:id="@+id/tv_forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:onClick="onClick"
        android:clickable="true"
        android:layout_gravity="center_horizontal"
        android:text="@string/txt_forgotPassword"/>

</LinearLayout>
