<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:wheel="http://schemas.android.com/apk/res-auto"
    android:layout_width="240dp"
    android:layout_height="wrap_content"
    android:background="@drawable/rectangle_rounded_angle_white_bg">
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:paddingRight="12dp"
        android:paddingTop="12dp">
        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_clear_disabled" />
    </FrameLayout>
    <LinearLayout
        android:id="@+id/llContentBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="bottom">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/liveroom_rebate_current_credit"
                android:textSize="14sp"
                android:textColor="@color/text_color_grey"/>
            <TextView
                android:id="@+id/tvRebateCredit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0.62"
                android:textSize="18sp"
                android:layout_marginLeft="4dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="bottom">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/liveroom_rebate_generated_desc"
                android:textSize="14sp"
                android:textColor="@color/text_color_grey"/>
            <TextView
                android:id="@+id/tvCountDown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="300s"
                android:textSize="18sp"
                android:layout_marginLeft="4dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tvRules"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/liveroom_rebate_rules"
            android:layout_marginTop="16dp"
            android:textColor="@color/text_color_grey"
            android:textSize="12sp"/>
    </LinearLayout>

    <com.qpidnetwork.livemodule.view.MaterialProgressBar
        android:id="@+id/pbLoading"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_gravity="center"
        wheel:matProg_barColor="@color/blue_color"
        wheel:matProg_progressIndeterminate="true"
        android:layout_centerInParent="true"
        android:visibility="visible"/>
</RelativeLayout>
